--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           
       - name: Setup Node.js
         uses: actions/setup-node@v4
