fix: workflow fixed, cover main ref in a derached HEAD state

--- a/.github/workflows/component-pipeline.yml
+++ b/.github/workflows/component-pipeline.yml
@@ -433,6 +433,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          ref: main
           fetch-depth: 0
           
       - name: Setup Node.js
@@ -545,6 +546,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          ref: main
           fetch-depth: 0
           
       - name: Setup Git
